--- a/socrates-admin/socrates-admin.csproj
+++ b/socrates-admin/socrates-admin.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AntDesign" Version="0.20.4.2" />
     <PackageReference Include="AntDesign.ProLayout" Version="0.20.3" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.15" PrivateAssets="all" />
